--- a/package.json
+++ b/package.json
@@ -1,26 +1,15 @@
 {
-  "name": "react-credit-cards",
-  "version": "0.8.3",
+  "name": "@omtanke/react-credit-cards",
+  "version": "1.0.0-Alpha1",
   "description": "Beautiful credit cards for your payment forms",
-  "author": "AMARO Fashion <tech@amaro.com>",
-  "contributors": [
-    {
-      "name": "Cassio Cardoso",
-      "email": "cassio.cardoso@amaro.com"
-    },
-    {
-      "name": "Gil Barbara",
-      "email": "gil.barbara@amaro.com"
-    }
-  ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/amarofashion/react-credit-cards.git"
+    "url": "git+https://github.com/omtanke/react-credit-cards.git"
   },
   "bugs": {
-    "url": "https://github.com/amarofashion/react-credit-cards/issues"
+    "url": "https://github.com/omtanke/react-credit-cards/issues"
   },
-  "homepage": "https://github.com/amarofashion/react-credit-cards#readme",
+  "homepage": "https://github.com/omtanke/react-credit-cards#readme",
   "license": "MIT",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -36,8 +25,8 @@
     "payment"
   ],
   "peerDependencies": {
-    "react": "^15.0.0 || ^16.0.0",
-    "prop-types": "^15.7.2"
+    "glob-parent": ">=5.1.2",
+    "tar": ">=4.4.18 <5.0.0 || >=5.0.10 <6.0.0 || >=6.1.9"
   },
   "dependencies": {
     "payment": "^2.3.0"
@@ -125,11 +114,11 @@
   "size-limit": [
     {
       "path": "./es/index.js",
-      "limit": "6 kB"
+      "limit": "10 kB"
     },
     {
       "path": "./lib/index.js",
-      "limit": "6 kB"
+      "limit": "10 kB"
     }
   ],
   "husky": {
